# ucs

./: .envrc  .gitignore  README.md  pyproject.toml  spec.md
devnotes/: 20260414_165857.md
docker/: Dockerfile
samples/claude/: critique_help.txt  hi.txt
ucs/: cli.py  config.py  dispatcher.py
