[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ucs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "slack-bolt[async]>=1.21",
    "slack-sdk>=3.33",
    "docker>=7.1",
    "aiohttp>=3.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ucs*"]

[project.scripts]
ucs = "ucs.cli:cli"
